OBPIH-7859 Fix separator label overflow

--- a/src/js/components/receivingV2/receiving.scss
+++ b/src/js/components/receivingV2/receiving.scss
@@ -73,9 +73,12 @@
   }
 
   &__separator-label {
+    display: block;
     font-weight: 600;
     color: var(--gray-700);
     white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
     padding-top: 8px;
     padding-bottom: 8px;
   }
